--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
     ]
   },
   "devDependencies": {
+    "faker": "^5.5.3",
+    "jest": "^26.6.0",
+    "jest-cli": "^26.6.3",
     "nodemon": "^2.0.7",
+    "puppeteer": "^10.1.0",
     "riteway": "^6.2.1"
   }
 }
