API FOR STUFF WOOP

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_DEV_SEND_CLICK_URL=http://clickcounter.control.clickthebutton.click/click
 REACT_APP_PROD_SEND_CLICK_URL=http://clickcounter.pub.clickthebutton.click/click
-REACT_APP_DEV_GET_CLICKS_URL=http://clickcounter.pub.clickthebutton.click/click
-REACT_APP_PROD_GET_CLICKS_URL=http://clickcounter.pub.clickthebutton.click/click
+REACT_APP_DEV_GET_CLICKS_URL=http://clickgetter.control.clickthebutton.click/click
+REACT_APP_PROD_GET_CLICKS_URL=http://clickgetter.pub.clickthebutton.click/click
