--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
     keepalive_timeout           3000;
     server {
         listen                  3000;
-        location / {
+        location  {
             root /usr/share/nginx/html;
             index index.html;
             try_files $uri /index.html
