--- a/nginx.conf
+++ b/nginx.conf
@@ -15,10 +15,10 @@ http {
     keepalive_timeout           3000;
     server {
         listen                  3000;
-        location  {
+        location / {
             root /usr/share/nginx/html;
             index index.html;
-            try_files $uri /index.html
+            try_files $uri /index.html;
         }
         server_name             localhost;
         client_max_body_size    16m;
