--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,15 @@
-user                            root;
-worker_processes                auto;
+server {
+    listen       3000;
+    server_name  localhost;
 
-error_log                       /var/log/nginx/error.log warn;
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri /index.html;                 
+    }
 
-events {
-    worker_connections          1024;
-}
-
-http {
-    include                     /etc/nginx/mime.types;
-    default_type                application/octet-stream;
-    sendfile                    off;
-    access_log                  off;
-    keepalive_timeout           3000;
-    server {
-        listen                  3000;
-        location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri /index.html;
-        }
-        server_name             localhost;
-        client_max_body_size    16m;
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
