--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -18,7 +18,7 @@ FROM nginx:1.17.1-alpine
 
 EXPOSE 3000
 
-COPY nginx.conf /etc/nginx/
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=build-step /app/build /usr/share/nginx/html
 
