--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,9 @@
 server {
-    listen       3000;
-    server_name  localhost;
+  listen 3000;
+  root /usr/share/nginx/html;
+  index index.html index.htm;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;                 
-    }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
 }
